--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
